unpackaged/main/default/objects/Logistics_Input__c/Logistics_Input__c.object-meta.xml
<CustomObject>
    <label>Logistics Input</label>
    <nameField>
        <displayFormat>LI-{00000}</displayFormat>
        <label>Logistics Input Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logistics Inputs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>