unpackaged/main/default/objects/Logistics_Input__c/fields/Materials_Delivery_Preference__c.field-meta.xml
<CustomField>
    <fullName>Materials_Delivery_Preference__c</fullName>
    <label>Materials Delivery Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deliver to Warehouse</fullName>
            </value>
            <value>
                <fullName>Will Call</fullName>
            </value>
            <value>
                <fullName>Direct to Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>