unpackaged/main/default/objects/Logistics_Input__c/fields/Receiving_Days__c.field-meta.xml
<CustomField>
    <fullName>Receiving_Days__c</fullName>
    <label>Receiving Days</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monday</fullName>
            </value>
            <value>
                <fullName>Tuesday</fullName>
            </value>
            <value>
                <fullName>Wednesday</fullName>
            </value>
            <value>
                <fullName>Thursday</fullName>
            </value>
            <value>
                <fullName>Friday</fullName>
            </value>
            <value>
                <fullName>Saturday</fullName>
            </value>
            <value>
                <fullName>Sunday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>