unpackaged/main/default/objects/Logistics_Input__c/fields/Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Agreement</label>
    <referenceTo>Service_Agreement__c</referenceTo>
    <relationshipLabel>Logistics Inputs</relationshipLabel>
    <relationshipName>Logistics_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>