unpackaged/main/default/objects/Logistics_Input__c/fields/Warehouse_Address__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Address__c</fullName>
    <label>Warehouse Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>