unpackaged/main/default/objects/Logistics_Input__c/fields/Warehouse_Contact__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Logistics Inputs</relationshipLabel>
    <relationshipName>Logistics_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>