unpackaged/main/default/objects/Logistics_Input__c/fields/Warehouse_Operational__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Operational__c</fullName>
    <label>Warehouse Operational</label>
    <type>Date</type>
</CustomField>